Complete JS code for tic tac toe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <h1>Tic Tac Toe</h1>
+    <div class="players">
+        <div class="player-x">Player X</div>
+        <div class="player-o">Player Y</div>
+        <div class="result"></div>
+    </div>
     <div class="grid">
         <div></div>
         <div></div>
