Finished the game, just need to finish teh new game button styling

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>Tic Tac Toe</h1>
     <div class="data">
         <div class="players">
-            <div class="player-x">Player X</div>
-            <div class="player-o">Player Y</div>
+            <div class="player-x">Player x</div>
+            <div class="player-o">Player o</div>
         </div>
         <div class="result"></div>
     </div>
