--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <div class="result"></div>
     </div>
     <div class="grid">
+        <div class="first-row first-col"></div>
+        <div class="first-row"></div>
+        <div class="first-row third-col"></div>
+        <div class="first-col"></div>
         <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="third-col"></div>
+        <div class="third-row first-col"></div>
+        <div class="third-row"></div>
+        <div class="third-row third-col"></div>
     </div>
     <button>New Game</button>
 </body>
